--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.7.0",
     "@loadable/component": "^5.15.2",
     "@reduxjs/toolkit": "^1.8.4",
+    "@tanstack/react-query": "5.17.19",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -16,6 +17,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router": "5.1.9",
     "@types/react-router-dom": "5.1.7",
+    "@web3modal/wagmi": "4.0.13",
     "antd": "^4.22.4",
     "axios": "^0.27.2",
     "i18next": "^21.9.0",
@@ -30,6 +32,8 @@
     "react-toastify": "^9.0.8",
     "react-top-loading-bar": "^2.1.0",
     "typescript": "^4.4.2",
+    "viem": "2.7.13",
+    "wagmi": "2.5.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
