--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@web3modal/wagmi": "4.0.13",
     "antd": "^4.22.4",
     "axios": "^0.27.2",
+    "ethers": "6.11.1",
     "i18next": "^21.9.0",
     "i18next-browser-languagedetector": "^6.1.5",
     "react": "^18.2.0",
