--- a/.env.dev
+++ b/.env.dev
@@ -2,8 +2,6 @@
 PORT=1114
 REACT_APP_APP_NAME=FE_WalletConnectBase
 REACT_APP_NUMBER_OF_NEW_LISTING=10
-REACT_APP_WALLET_CONNECT_PROJECT_ID=f78180a8e45ede6927e3eeda2335c600
-REACT_APP_CONTRACT_MINT_NFT_CAT_ADDRESS=0x50ACf28cbCf609F2C39c4567Cab455403F6630d7
 
 #===== BACK-END
 REACT_APP_API_END_POINT=http://127.0.0.1:1111/api
@@ -12,6 +10,12 @@ REACT_APP_API_END_POINT=http://127.0.0.1:1111/api
 HTTPS=false
 SSL_CRT_FILE=ssls/cert.pem
 SSL_KEY_FILE=ssls/key.pem
+
+#===== WEB3 CONFIGS
+REACT_APP_WALLET_CONNECT_PROJECT_ID=f78180a8e45ede6927e3eeda2335c600
+REACT_APP_CONTRACT_MINT_NFT_CAT_ADDRESS=0x50ACf28cbCf609F2C39c4567Cab455403F6630d7
+REACT_APP_BLOCK_SCAN_EXPLORER=https://testnet.blastscan.io/tx/:hash
+REACT_APP_TOTAL_SUPPLY_NFTs=10000
 
 #===== ORTHER
 REACT_APP_DEBUG_MODE=TRUE
