--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^21.9.0",
     "i18next-browser-languagedetector": "^6.1.5",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
     "react-redux": "^8.0.2",
